[package]
name = "compliance_ai_expert_connector"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "npm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["native-tls", "json"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1.23.1", features = ["v4"] }
